dimagi-SalesforceFB/src/objects/DContract__c.object
<CustomObject>
    <fields>
        <fullName>Intracompany_Sub_contract__c</fullName>
        <inlineHelpText>For internal accounting. Is this an internal subcontract between Dimagi business units?</inlineHelpText>
        <label>Intracompany Sub-contract</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_First_Nag_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First Nag Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Snooze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Snooze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Report_Out_Created_Date__c</fullName>
        <label>Last Report Out Created Date</label>
        <summarizedField>Project_Report_Out__c.CreatedDate</summarizedField>
        <summaryForeignKey>Project_Report_Out__c.Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Report_Out_Date__c</fullName>
        <inlineHelpText>The most recent date that a report out was filled out for.</inlineHelpText>
        <label>Last Report Out Date</label>
        <summarizedField>Project_Report_Out__c.Report_Out_Date__c</summarizedField>
        <summaryForeignKey>Project_Report_Out__c.Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Report_Out_Status__c</fullName>
        <description>Stores the value from the most recent report out.</description>
        <inlineHelpText>Stores the value from the most recent report out submitted.</inlineHelpText>
        <label>Last Report Out Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Internal_Sub_December_2015__c</fullName>
        <description>Records Direct Costs - Internal Sub-Contract amount from inception to December 31, 2015</description>
        <inlineHelpText>Records Direct Costs - Internal Sub-Contract amount from inception to December 31, 2015</inlineHelpText>
        <label>Legacy Internal Sub December 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>testing ignore</inlineHelpText>
        <label>CC Location Test</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Term_Relationship_with_Partner__c</fullName>
        <description>How is the long term relationship with the partner with respect to how this project went, with 1 being a poor relationship and low likelihood of partnering again and 5 being very strong relationship and a high likelihood of partnering again.</description>
        <inlineHelpText>How is the long term relationship with the partner with respect to how this project went, with 1 being a poor relationship and low likelihood of partnering again and 5 being very strong relationship and a high likelihood of partnering again.</inlineHelpText>
        <label>Long Term Relationship (Post Contract)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_term_partnership_or_one_off__c</fullName>
        <label>Long term partnership or one-off</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_Component_Risks__c</fullName>
        <label>Major component risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Margin_by_Contract_Dates__c</fullName>
        <description>% through contract dates minus % of budget used</description>
        <formula>Percent_through_Contract__c - Budget_Used__c</formula>
        <inlineHelpText>% through contract dates minus % of budget used</inlineHelpText>
        <label>Margin % by Contract Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_by_SOW_Completed__c</fullName>
        <description>% of Work Completed (populated by PM in PRO) minus % of Budget Used</description>
        <formula>Percent_through_SOW_deliverables__c - Budget_Used__c</formula>
        <inlineHelpText>% of Work Completed (populated by PM in PRO) minus % of Budget Used</inlineHelpText>
        <label>Buffer % by Work Completed (Mustafa)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maturity_implementation__c</fullName>
        <inlineHelpText>Was the contract executed following the Maturity model?</inlineHelpText>
        <label>Maturity implementation</label>
        <picklist>
            <picklistValues>
                <fullName>Not Updated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Income_based_on_SOW_Completed__c</fullName>
        <description>(% of Work Completed * Total Contract Amount) - Total Calculated Costs (Labor &amp; External Expenses)</description>
        <formula>(Percent_through_SOW_deliverables__c *  Total_Amount_of_Contract__c ) -  Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(% of Work Completed  * Total Contract Amount) - Total Calculated Costs (Labor &amp; External Expenses)</inlineHelpText>
        <label>Net Income based on % Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Execution_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract Execution Owner</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Contracts (Parent Contract Execution Owner)</relationshipLabel>
        <relationshipName>Child_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If an intracompany contract, select the corresponding parent.</inlineHelpText>
        <label>Parent Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Child Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Milestone__c</fullName>
        <inlineHelpText>Details of how Dimagi will get paid on this project</inlineHelpText>
        <label>Payment Milestone</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Percent_through_Contract__c</fullName>
        <description>Calculates % through the contract (assumes linear from today versus the contract end date)</description>
        <formula>IF(today()&gt;Contract_End_Date__c, 1, (today() - Contract_Start_Date__c ) / ( Contract_End_Date__c -  Contract_Start_Date__c ))</formula>
        <inlineHelpText>Calculates % through the contract (assumes linear from today versus the contract end date)</inlineHelpText>
        <label>% Time into Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_through_SOW_deliverables__c</fullName>
        <description>Set by the Dimagi PM in PRO (estimated % complete through the SOW/deliverables/work)</description>
        <inlineHelpText>Set by the Dimagi PM in PRO (estimated % complete through the SOW/deliverables/work)</inlineHelpText>
        <label>% of Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prime_Contracting_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which business unit is actually doing the work on the project?</inlineHelpText>
        <label>Execution Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Contracts (Execution Owner)</relationshipLabel>
        <relationshipName>Prime_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Advance_Income__c</fullName>
        <label>Product Advance Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Community_Income__c</fullName>
        <label>Product Community Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Enterprise_Income__c</fullName>
        <label>Product Enterprise Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Income_Budget_Percent__c</fullName>
        <description>Calculated from Contract Product Budget over sum of services, product, and expense budget</description>
        <formula>Product_Income_Budget__c /(  Burdened_Income_Budget__c + Product_Income_Budget__c + Contract_Expense_BUDGET__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Contract Product Budget over sum of services, product, and expense budget</inlineHelpText>
        <label>Contract Product Budget Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Income_Budget__c</fullName>
        <description>Product budget from Contract data</description>
        <inlineHelpText>Product budget from Contract data</inlineHelpText>
        <label>Contract Product Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Income__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Calculated from the All Time Income * % of Product from the Income to date.</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Calculated from the All Time Income * % of Product from the Income to date.</inlineHelpText>
        <label>Product Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Other_Income__c</fullName>
        <label>Product Other Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <label>Product Owner</label>
        <picklist>
            <picklistValues>
                <fullName>INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMoz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Pro_Income__c</fullName>
        <label>Product Pro Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_SMS_Income__c</fullName>
        <label>Product SMS Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Spend__c</fullName>
        <description>Product spend to date, which is calculated as Product Budget * % Time into Contract</description>
        <formula>Product_Income_Budget__c *  Percent_through_Contract__c</formula>
        <inlineHelpText>Product spend to date, which is calculated as Product Budget * % Time into Contract</inlineHelpText>
        <label>Product Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Standard_Income__c</fullName>
        <label>Product Standard Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Projects</inlineHelpText>
        <label>Project Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Expenses__c</fullName>
        <description>This is a dropdown to identify the type of expenses the project is on (Per Actuals or Per Diem). For more information: https://confluence.dimagi.com/display/internal/Travel+-+Expense+Policy</description>
        <inlineHelpText>This is a dropdown to identify the type of expenses the project is on (Per Actuals or Per Diem). For more information: https://confluence.dimagi.com/display/internal/Travel+-+Expense+Policy</inlineHelpText>
        <label>Project Expenses</label>
        <picklist>
            <picklistValues>
                <fullName>Actuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per diem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Impact__c</fullName>
        <description>How impactful is the project in terms of delivering benefits to those the program seeks to help with 1 being very low impact and 5 being very high impact.</description>
        <inlineHelpText>How impactful is the project in terms of delivering benefits to those the program seeks to help with 1 being very low impact and 5 being very high impact.</inlineHelpText>
        <label>Project Impact (Post Contract data)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Dimagi PM</inlineHelpText>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@dimagi.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Project Manager)</relationshipLabel>
        <relationshipName>Contracts_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Other_BUDGET__c</fullName>
        <description>Contract Expense Budget - External Subcontract Budget - Contract Travel budget</description>
        <formula>Contract_Expense_BUDGET__c -( Direct_Costs_Sub_Contract_BUDGET__c + Direct_Costs_Travel_BUDGET__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Expense Budget - External Subcontract Budget - Contract Travel budget</inlineHelpText>
        <label>Other Direct Costs BUDGET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Other_Spent__c</fullName>
        <description>Other Project Spend to date (Calculated from All Intacct Direct Costs - Internal Sub-contract Spend - External Sub-contract Spend - Project Travel Spend; Should align with Intacct Monthly)</description>
        <formula>Total_Direct_Costs__c -(Internal_Sub_contract_Spend__c+Direct_Costs_Sub_contract_Expenses__c+Direct_Costs_Travel_Expenses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Other Project Spend to date (Calculated from All Intacct Direct Costs - Internal Sub-contract Spend - External Sub-contract Spend - Project Travel Spend; Should align with Intacct Monthly)</inlineHelpText>
        <label>Project Other Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Dropbox_Location__c</fullName>
        <inlineHelpText>Should be in Dimagi - Proposals</inlineHelpText>
        <label>Proposal Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QB_All_Time_Income_12_31_13__c</fullName>
        <label>QB All Time Income 12/31/13</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requires_Developer_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The most recent update to Fogbugz ticket.</description>
        <inlineHelpText>The most recent update to Fogbugz ticket.</inlineHelpText>
        <label>Requires Dev Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Report_Out__c</fullName>
        <inlineHelpText>Does this contract need a Project Report Out?</inlineHelpText>
        <label>Requires Report Out</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Safety_Contact__c</fullName>
        <label>Safety Contact</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contract_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Nag_Sent_Date__c</fullName>
        <label>Second Nag Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Budget__c</fullName>
        <description>(Total Contract Amount - Expense Budget) * (1- Expected % Buffer)</description>
        <formula>(Total_Amount_of_Contract__c - Contract_Expense_BUDGET__c) * (1-Expected_Buffer__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Contract Amount - Expense Budget) * (1- Expected % Buffer)</inlineHelpText>
        <label>Project Services Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Income_Budget_Percent__c</fullName>
        <description>Calculated from Contract Services Budget over sum of services, product, and expense budget</description>
        <formula>Burdened_Income_Budget__c /(  Burdened_Income_Budget__c + Product_Income_Budget__c + Contract_Expense_BUDGET__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Contract Services Budget over sum of services, product, and expense budget</inlineHelpText>
        <label>Contract Services Budget Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Income__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Calculated from the All Time Income * % of Services from the Income to date.</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Calculated from the All Time Income * % of Services from the Income to date.</inlineHelpText>
        <label>Services Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Spend__c</fullName>
        <description>Calculated from FB time data and Loaded Billing Rates (updated daily for last 4 months)</description>
        <inlineHelpText>Calculated from FB time data and Loaded Billing Rates (updated daily for last 4 months)</inlineHelpText>
        <label>Services Spend</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>$Setup.Snapshot_Settings__c.Snapshot_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name_Total__c</fullName>
        <formula>Name &amp; &apos; - &apos; &amp; TEXT(MONTH( $Setup.Snapshot_Settings__c.Snapshot_Date__c )) &amp; &apos;/&apos; &amp; TEXT(YEAR( $Setup.Snapshot_Settings__c.Snapshot_Date__c )) &amp; &apos; - Total&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Pipeline Snapshots. Ignore.</inlineHelpText>
        <label>Snapshot Name (Total)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name__c</fullName>
        <formula>Name &amp; &apos; - &apos;  &amp; TEXT(MONTH( $Setup.Snapshot_Settings__c.Snapshot_Date__c )) &amp; &apos;/&apos; &amp; TEXT(YEAR( $Setup.Snapshot_Settings__c.Snapshot_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Probability__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snapshot_Source_Type__c</fullName>
        <label>Snapshot Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snapshot_Stage_Closed__c</fullName>
        <description>Used to hardcode the stage in snapshots.</description>
        <inlineHelpText>Used to hardcode the stage in snapshots.</inlineHelpText>
        <label>Snapshot Stage Closed</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snapshot_Stage_Outstanding__c</fullName>
        <description>Used to hardcode the stage in snapshots.</description>
        <inlineHelpText>Used to hardcode the stage in snapshots.</inlineHelpText>
        <label>Snapshot Stage Outstanding</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding Contracted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snapshot_Stage_Total__c</fullName>
        <inlineHelpText>Used for creating Pipeline Snapshots.</inlineHelpText>
        <label>Snapshot Stage Total</label>
        <picklist>
            <picklistValues>
                <fullName>Total</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snooze_Date__c</fullName>
        <label>Snooze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snooze_Days__c</fullName>
        <label>Snooze Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <inlineHelpText>Pick the sub-area(s) that corresponds to the area(s) that you selected.</inlineHelpText>
        <label>Sub Sector</label>
        <picklist>
            <picklistValues>
                <fullName>*** Agriculture and Food Security ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Economic Development ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rural Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Education and Training ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Emergency Response ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Financial Services for the Poor ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Cash Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services to the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Gender Equality and Women&apos;s Emp ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sex Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Governance and Accountability ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Health ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cervical Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Summary_Overview__c</fullName>
        <label>Summary / Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Satisfaction__c</fullName>
        <description>How was the team&apos;s satisfaction with the project and working with the partner, considering fairness, direct communication and working conditions where 1 is very low team satisfaction and 5 is extremely high team satisfaction.</description>
        <inlineHelpText>How was the team&apos;s satisfaction with the project and working with the partner, considering fairness, direct communication and working conditions where 1 is very low team satisfaction and 5 is extremely high team satisfaction.</inlineHelpText>
        <label>Team Satisfaction (Post Contract data)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tech_Execution_Budget__c</fullName>
        <description>Services Budget * (1 - % of Services budget for GS)</description>
        <formula>Services_Budget__c *(1- of_Services_budget_for_GS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Services Budget * (1 - % of Services budget for GS)</inlineHelpText>
        <label>Tech Project Services Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Nag_Sent_Date__c</fullName>
        <label>Third Nag Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Three_Month_Cash_Minus_Expenses_EV__c</fullName>
        <description>Calculated based on Contract Dates and Total Non Expense Income Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 3),  Total_Non_Expense_Income_Remaining__c  , 
 Total_Non_Expense_Income_Remaining__c  * (3 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total Non Expense Income Remaining</inlineHelpText>
        <label>3 Month Cash Minus Expenses (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Three_Month_EV__c</fullName>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt;  (MONTH(today()) + 12*YEAR(today()) + 3),
   Total_Amount_REMAINING__c ,
   Total_Amount_REMAINING__c  * (3 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3Month Cash (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_REMAINING__c</fullName>
        <description>Amount left to Invoice. Total Amount of Contract minus All Time Income. Updated monthly by Jason doing the Intacct data upload.</description>
        <inlineHelpText>Amount left to Invoice. Total Amount of Contract minus All Time Income. Updated monthly by Jason doing the Intacct data upload.</inlineHelpText>
        <label>Total Amount REMAINING</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>